--- a/quemsomos.html
+++ b/quemsomos.html
@@ -38,7 +38,7 @@
   <p><a href="docs.html"><b><u>Docs:</b></u></a> Um serviço projetado para ajudar quem mora distante da unidade prisional e tem pouco tempo durante a semana para enviar a documentação para o cadastro no rol de visitas. Aqui mostramos também o passo a passo de como você mesmo pode fazer.</p>
   </li>
   <li>
-    <p><a href="jumbo.html"><b><u>Jumbo:</b></u></a> Produtos de qualidade com preços acessíveis. Roupas, alimentos, peças de higiêne entre outros produtos selecionados com base nos gostos e preferências de quem está lá dentro.</p>
+    <p><a href="jumbo.html"><b><u>Jumbo:</b></u></a> Produtos de qualidade com preços acessíveis. Roupas, alimentos, peças de higiene entre outros produtos selecionados com base nos gostos e preferências de quem está lá dentro.</p>
   </li>
   <li>
     <a href="shop.html"><b><u>Shop:</b></u></a> Tudo o que você precisa para a visita e também muitas ofertas para o seu dia a dia.
