--- a/jumbo.html
+++ b/jumbo.html
@@ -24,7 +24,7 @@
                     <h1>Produtos de Higiene</h1>
          </* Para baixo produtos da categoria (sabonetes p/ ex) */>        
                     <div class="category1">
-                        <label><h2>Sabonetes</h2><h3>( Quantidade máxima: 2 por jumbo )</h3></label>
+                        <label><h2>Sabonetes</h2><h3>( 2 unidades por jumbo )</h3></label>
                         <div class="subcategory">
                             <form class="formLista">
                 </* Para baixo produto especifico (protex p/ ex)*/>
@@ -47,7 +47,7 @@
          </* fim- produtos da categoria (sabonetes p/ ex) */>
          </* Para baixo produtos da categoria (sabonetes p/ ex) */>        
                     <div class="category1">
-                        <label><h2>Cremes Dentais</h2><h4>(apenas 2 unidades por jumbo)</h4></label>
+                        <label><h2>Cremes Dentais</h2><h3>( 2 unidades por jumbo )</h3></label>
                         <div class="subcategory">
                             <form class="formLista">
                 </* Para baixo produto especifico (protex p/ ex)*/>
