--- a/jumbo.html
+++ b/jumbo.html
@@ -52,7 +52,7 @@
 
          </* Para baixo CREMES DENTAIS */>       
                     <div class="category1">
-                        <label><h2>Cremes Dentais</h2><h3>( 1 unidades por jumbo )</h3></label>
+                        <label><h2>Cremes Dentais</h2><h3>( 1 unidade por jumbo )</h3></label>
                         <div class="subcategory">
                             <form class="formLista">
                 </* Para baixo PRODUTOS ESPECIFICO 1 */>
