--- a/envio.html
+++ b/envio.html
@@ -20,6 +20,7 @@
             <input type="hidden" id="nomeInput" name="nome">
             <input type="hidden" id="sobrenomeInput" name="sobrenome">
             <input type="hidden" id="whatsappInput" name="whatsapp">
+            <input type="hidden" name="_next" value="https://rodrigosilva1302.github.io/jumbex/index.html">
             <input type="hidden" name="_captcha" value="false">
 
 
