--- a/envio.html
+++ b/envio.html
@@ -18,7 +18,7 @@
             <!-- Campos ocultos para enviar informações -->
             <input type="hidden" id="detalhesCompraInput" name="detalhesCompra">
             <input type="hidden" id="nomeInput" name="_subject" value="Novo envio!">
-            <input type="hidden" id="sobrenomeInput" name="sobrenome">
+            <input type="hidden" id="sobrenomeInput" name="_subject" value="Novo envio!">
             <input type="hidden" id="whatsappInput" name="whatsapp">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_next" value="https://rodrigosilva1302.github.io/jumbex/index.html">
