--- a/envio.html
+++ b/envio.html
@@ -17,9 +17,9 @@
         <form id="formEnvio" action="https://formsubmit.co/jumbex.jumboexpress@gmail.com" method="POST">
             <!-- Campos ocultos para enviar informações -->
             <input type="hidden" id="detalhesCompraInput" name="detalhesCompra">
-            <input type="hidden" id="nomeInput" name="_subject" value="Novo envio!">
-            <input type="hidden" id="sobrenomeInput" name=sobrenome">
-            <input type="hidden" id="whatsappInput" name="whatsapp">
+            <input type="hidden" id="nomeInput" name="nome">
+            <input type="hidden" id="sobrenomeInput" name="sobrenome">
+            <input type="hidden" id="whatsappInput" name="_subject" value="Novo envio!">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_next" value="https://rodrigosilva1302.github.io/jumbex/index.html">
 
