--- a/finalizar.html
+++ b/finalizar.html
@@ -17,7 +17,7 @@
     <div class="container">            
         
       
-        <form id="formularioContato" onsubmit="enviarInformacoes(event)">
+        <form id="formularioContato" onsubmit="enviarInformacoes(event)" method="POST">
             <h1>Informe Seus Dados</h1>
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
