--- a/envio.html
+++ b/envio.html
@@ -26,7 +26,7 @@
             <input type="hidden" id="unidadePrisionalInput" name="unidadePrisional">
             <input type="hidden" id="formaPagamentoInput" name="formaPagamento">
             <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_next" value="https://github.com/rodrigosilva1302/jumbex/blob/main/obrigado.html">
+            <input type="hidden" name="_next" value="https://rodrigosilva1302.github.io/jumbex/obrigado.html">
 
 
             <!-- Botão de envio -->
