--- a/obrigado.html
+++ b/obrigado.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
     <meta charset="utf-8">
-    <title>Finalizar Compra</title>
+    <title>Obrigado!</title>
     <meta name="theme-color" content="#E34010">
     <link rel="icon" href="jbx.ico">
     <link rel="stylesheet" type="text/css" href="styleobrigado.css">
